src/apps/Altinn.AccessManagement/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: access-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: access-management
        app.kubernetes.io/part-of: authorization
        azure.workload.identity/use: "true"
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: access-management
      containers:
        - name: access-management
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: ghcr.io/altinn/altinn-auth/access-management:latest
          ports:
            - name: http
              containerPort: 5110
          startupProbe:
            httpGet:
              path: /health/startup
              port: 5110
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 5110
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 5110
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
