src/apps/Altinn.AccessManagement/deploy/base/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: accessmanagement
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: access-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: access-management
        app.kubernetes.io/part-of: accessmanagement
        azure.workload.identity/use: "true"
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: access-management
      containers:
        - name: access-management
          image: nginxdemos/hello:plain-text
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: accessmanagement
spec:
  selector:
    app.kubernetes.io/name: access-management
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: access-management
  labels:
    app.kubernetes.io/name: access-management
    app.kubernetes.io/part-of: accessmanagement
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: l5d-dst-override
                value: access-management.product-accessmanagement.svc.cluster.local:80
      backendRefs:
        - group: ""
          kind: Service
          name: access-management
          port: 80
